k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mininotes
  namespace: mininotes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mininotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mininotes
                port:
                  number: 80
